[gd_scene load_steps=3 format=3 uid="uid://c4layxlfqxcpk"]

[ext_resource type="Script" path="res://scenes/day_03/level_01/enemies/Hive.gd" id="1_y5hvm"]
[ext_resource type="PackedScene" uid="uid://ctjsn0u6b60n6" path="res://scenes/day_03/level_01/enemies/HiveDrone.tscn" id="2_hohpq"]

[node name="Hive" type="Node2D"]
script = ExtResource("1_y5hvm")
metadata/_edit_lock_ = true

[node name="Body" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="HiveDrone00" parent="Body" instance=ExtResource("2_hohpq")]
position = Vector2(3, 0)
hp = 1
metadata/_edit_lock_ = true

[node name="HiveDrone01" parent="Body" instance=ExtResource("2_hohpq")]
position = Vector2(22, 0)
hp = 1
metadata/_edit_lock_ = true

[node name="HiveDrone02" parent="Body" instance=ExtResource("2_hohpq")]
position = Vector2(41, 0)
hp = 1
metadata/_edit_lock_ = true

[node name="HiveDrone03" parent="Body" instance=ExtResource("2_hohpq")]
position = Vector2(11, 16)
hp = 1
metadata/_edit_lock_ = true

[node name="HiveDrone04" parent="Body" instance=ExtResource("2_hohpq")]
position = Vector2(0, 16)
hp = 1
metadata/_edit_lock_ = true

[node name="HiveDrone05" parent="Body" instance=ExtResource("2_hohpq")]
position = Vector2(44, 16)
hp = 1
metadata/_edit_lock_ = true

[node name="HiveDrone06" parent="Body" instance=ExtResource("2_hohpq")]
position = Vector2(33, 16)
hp = 1
metadata/_edit_lock_ = true

[node name="HiveDrone07" parent="Body" instance=ExtResource("2_hohpq")]
position = Vector2(6, 32)
hp = 1
metadata/_edit_lock_ = true

[node name="HiveDrone08" parent="Body" instance=ExtResource("2_hohpq")]
position = Vector2(22, 32)
hp = 1
metadata/_edit_lock_ = true

[node name="HiveDrone09" parent="Body" instance=ExtResource("2_hohpq")]
position = Vector2(38, 32)
hp = 1
metadata/_edit_lock_ = true

[node name="BottomRight" type="Marker2D" parent="Body"]
position = Vector2(60, 32)
metadata/_edit_lock_ = true

[node name="MovementTimer" type="Timer" parent="."]
one_shot = true

[node name="GunTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
[connection signal="timeout" from="GunTimer" to="." method="_on_gun_timer_timeout"]
